[package]
name = "linemux"
version = "0.2.3"
authors = ["Jon Magnuson <jon.magnuson@gmail.com>"]
edition = "2018"
description = "A library providing asynchronous, multiplexed tailing for (namely log) files."
documentation = "https://docs.rs/linemux"
repository = "https://github.com/jmagnuson/linemux"
readme = "README.md"
keywords = ["tail", "log", "watch", "fs", "events"]
license = "MIT OR Apache-2.0"
categories = ["asynchronous", "filesystem"]

[badges]
travis-ci = { repository = "jmagnuson/linemux", branch = "master" }
codecov = { repository = "jmagnuson/linemux", branch = "master", service = "github" }

[features]
default = ["tokio"]
tokio = ["tokio_"]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std"] }
#notify = "5.0.0-pre.13"
pin-project-lite = "0.1"
tokio_ = { package = "tokio", version = "1", features = ["fs", "io-util", "sync", "time"], optional = true }

# TODO: Set to pre.14 once released
[dependencies.notify]
git = "https://github.com/notify-rs/notify/"
rev = "b3f2d77e5c66e896b7a133fabd649b143bfe8b9d"
default-features = false
features = ["macos_kqueue"]


[dev-dependencies]
doc-comment = "0.3"
tempfile = "3.1"
tokio_ = { package = "tokio", version = "1", features = ["macros", "process", "rt-multi-thread"] }
